Placing some area below body content to resolve the images collection view overlapping

--- a/Assets/editor.css
+++ b/Assets/editor.css
@@ -388,7 +388,7 @@ div.field[placeholderText][contenteditable=true]:empty:focus:before {
 }
 
 #zss_field_content {
-    margin-bottom: 60px;
+    padding-bottom: 60px;
     font-size: 17px;
     line-height: 19px;
 }
